fix z-index

--- a/client/src/app/components/layout/footer/footer.component.scss
+++ b/client/src/app/components/layout/footer/footer.component.scss
@@ -10,7 +10,7 @@
   padding-top: 4px;
   position: fixed;
   width: 100%;
-  z-index: 98;
+  z-index: 21;
   @media only all and (max-width: 414px) {
     font-size: 11px;
   }
