--- a/client/src/app/components/roms/rom/rom.component.scss
+++ b/client/src/app/components/roms/rom/rom.component.scss
@@ -9,7 +9,7 @@
   margin: 0 auto;
   // padding-top: 15px;
   text-align: center;
-  z-index: 104;
+  z-index: 20;
 }
 
 .img-grid {
